XX/XX/22 (TRUST)  New keyword : Sondes_fichier { fichier filename } to read probes definition into a file
--------------------------------------------------------------------------------------------------
Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
--------------------------------------------------------------------------------------------------
--------------------------------------------------------------------------------------------------
Release notes version 1.8.4 : Enhancements, modifications and corrected bugs since version 1.8.3 :
--------------------------------------------------------------------------------------------------
23/11/21 (TRUST)  Fix         : Turbulent flow in a VDF stretched mesh was diverging with the implicited-diffusion solver 
23/11/21 (TRUST)  New feature : Add the possibility to read int64 binary files (.Zones, .sauv, .xyz) if possible (no overflow) with an int32 binary. The contrary was already true.
23/11/21 (TRUST)  Fix         : Restart calculation of previous old calculation with TRUST<=1.8.3 
23/11/21 (TRUST)  Fix         : Read_MED option convertAllToPoly improved to convert hybrid meshes (tetrahHexa+pyramids cells) from MG-Hybrid Salome tool to polyhedron meshes for PolyMAC discretization
23/11/21 (TRUST)  Fix         : Several AmgX GPU solvers (BiCGstab, FGMRES) may be used for Euler implicit scheme + memory leak fixes. See Solveurs/GPU/Implicite verification sheet
23/11/21 (TRUST)  Fix         : Champ_front_MED may now be combined with Champ_Fonc_MED_Tabule to enable time & space dependent boundary conditions read from MED file
23/11/21 (TRUST)  Output      : Suppress probe duplicated points into .son files
23/11/21 (TRUST)  Convergence : Use the true residual (instead of preconditioned one) for convergence test with PETSc solvers used on non-symmetric linear system (may be necessary to lower seuil option to have same results than 1.8.3)