@@ -1,3 +1,4 @@
+XX/XX/22 (TRUST)  Change      : Stability time step for diffusion operator is now the same on PolyMAC conform mesh compared to VDF mesh 
 XX/XX/22 (TRUST)  New keyword : Sondes_fichier { fichier filename } to read probes definition into a file
 --------------------------------------------------------------------------------------------------
 Release notes version 1.8.5_beta : Enhancements, modifications and corrected bugs since version 1.8.4 :
